# aiodatastore

./: .flake8  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements  requirements.dev  requirements.txt
.github/workflows/: dev.yml  lint.yml  publish.yml  test.yml
aiodatastore/: __init__.py  client.py  commit.py  constants.py  decorators.py  entity.py  filters.py  key.py  lookup.py  mutation.py  property.py  query.py  result.py  transaction.py  values.py
tests/: test_commit.py  test_filters.py  test_key.py  test_property.py  test_query.py  test_transaction.py  test_values.py
tests/integration/: test_client.py  test_values.py
tests/unit/: test_client.py  test_commit.py  test_entity.py  test_filters.py  test_key.py  test_lookup.py  test_mutation.py  test_property.py  test_query.py  test_transaction.py  test_values.py
